v1.2.6.?
- issue converting IPv6 address to string
- issue with IXxmParameterPostFile.SaveToFile
- xxmHttp: WinSock 2.2 (ws2_32.dll)
- xxmp.pas: respond to OPTIONS and TRACE with 501 Not Implemented
- jsonDoc.pas: v1.2.0
- switched to Delphi Community Edition

v1.2.5.450
- project registry "xxm.json" (auto-conversion of "xxm.xml")
- project file "Web.xxmp" JSON (auto-conversion from XML)
    ### ATTENTION ### ATTENTION ### ATTENTION ###
    xxmProject and xxm handlers are fitted with a transitional
    automatic conversion procedure that will convert XML project files (Web.xxmp)
    and the project registry (xxm.xml) into JSON files. (Web.xxmp in place,
    storing a Web_xxmp.bak copy; xxm.json)
    This may cause incompatibilities if different xxm versions are required to
    coexist on the same installation(s).
    This procedure (and all code using XML) is scheduled to be removed at a
    later, currently undetermined, version.
- fixed issue with custom parserValues spilling into next file processed
- IXxm* interfaces: all string arguments now with 'const'
	### ATTENTION ### ATTENTION ### ATTENTION ###
	This may cause errors on generated xxmp.pas:
		xxmp.pas() Error: Declaration of 'LoadPage' differs from previous declaration
		xxmp.pas() Error: Declaration of 'LoadFragment' differs from previous declaration
	Please update both methods by adding 'const' to the arguments with a string type.
- xxmIsapi*: Redirect: set 'Cache-control' to 'nocache' unless it was set already
- xxmHttpAU: added manifest to avoid default UAC elevation request
- xxmHttp,xxmHSys: Transfer-Encoding chunked (set Context.BufferSize to something >0 !!!)
- xxmHttp,xxmHSys: NTLM authentication (using SSPI, add "ntlm":true to the project in xxm.json)
- xxmHSys2: WebSocket support
- DispositionAttach: replace unacceptable characters (\/:*?"<>|) with '_'
- SendFile, SendStream before header sent, will by default have ContentType